--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         <p>Añadiendo cambios</p>
-        <ul><li>Otro cambio</li></ul>
+        <ul><li>Otros cambio</li></ul>
     </body>
 </html>
